--- a/pagina/historias_biblicas.html
+++ b/pagina/historias_biblicas.html
@@ -46,6 +46,92 @@
 
 <main class="container mx-auto px-6 py-16">
   
+  <!-- LANÇAMENTOS -->
+  <section class="mb-24 fade-in-section">
+    <div class="text-center mb-12">
+      <span class="inline-block bg-gradient-to-r from-yellow-400 to-orange-500 text-white px-5 py-2 rounded-full text-sm font-bold mb-4 shadow-lg animate-pulse">✨ NOVIDADES</span>
+      <h2 class="font-serif text-4xl md:text-5xl text-brand-blue font-bold mb-3">Últimos Lançamentos</h2>
+      <p class="text-lg text-gray-600 max-w-2xl mx-auto">Descubra as mais novas histórias que vão encantar e ensinar seus pequenos</p>
+    </div>
+
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+      <!-- Lançamento 1: 30 dias de oração -->
+      <div class="bg-white rounded-2xl shadow-xl overflow-hidden transform hover:-translate-y-2 transition-all duration-300 hover:shadow-2xl border-2 border-transparent hover:border-brand-gold">
+        <div class="relative">
+          <div class="absolute top-4 right-4 bg-red-500 text-white px-3 py-1 rounded-full text-xs font-bold z-10">NOVO</div>
+          <div class="bg-gradient-to-br from-purple-100 to-blue-100 h-64 flex items-center justify-center p-6">
+            <div class="text-center">
+              <div class="text-6xl mb-4">🙏</div>
+              <h3 class="font-serif text-2xl font-bold text-brand-blue">30 Dias de Oração</h3>
+            </div>
+          </div>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-700 mb-4 leading-relaxed">
+            Uma jornada espiritual que ensina às crianças o poder e a importância da oração através de histórias inspiradoras e atividades diárias.
+          </p>
+          <div class="flex items-center gap-2 text-sm text-gray-600 mb-4">
+            <i data-lucide="book-open" class="w-4 h-4"></i>
+            <span>30 histórias ilustradas</span>
+          </div>
+          <a href="#aprendendo-orar" class="block w-full bg-brand-blue text-white text-center px-6 py-3 rounded-lg font-bold hover:bg-blue-800 transition-all">
+            Ver Detalhes
+          </a>
+        </div>
+      </div>
+
+      <!-- Lançamento 2: O menino que mudou o mundo -->
+      <div class="bg-white rounded-2xl shadow-xl overflow-hidden transform hover:-translate-y-2 transition-all duration-300 hover:shadow-2xl border-2 border-transparent hover:border-brand-gold">
+        <div class="relative">
+          <div class="absolute top-4 right-4 bg-red-500 text-white px-3 py-1 rounded-full text-xs font-bold z-10">NOVO</div>
+          <div class="bg-gradient-to-br from-green-100 to-teal-100 h-64 flex items-center justify-center p-6">
+            <div class="text-center">
+              <div class="text-6xl mb-4">🌍</div>
+              <h3 class="font-serif text-2xl font-bold text-brand-blue">O Menino que Mudou o Mundo</h3>
+            </div>
+          </div>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-700 mb-4 leading-relaxed">
+            Uma história emocionante que mostra como pequenas atitudes de fé e amor podem transformar vidas e tocar corações.
+          </p>
+          <div class="flex items-center gap-2 text-sm text-gray-600 mb-4">
+            <i data-lucide="heart" class="w-4 h-4"></i>
+            <span>História completa ilustrada</span>
+          </div>
+          <a href="#especial-natal" class="block w-full bg-brand-blue text-white text-center px-6 py-3 rounded-lg font-bold hover:bg-blue-800 transition-all">
+            Ver Detalhes
+          </a>
+        </div>
+      </div>
+
+      <!-- Lançamento 3: Calminho no coração -->
+      <div class="bg-white rounded-2xl shadow-xl overflow-hidden transform hover:-translate-y-2 transition-all duration-300 hover:shadow-2xl border-2 border-transparent hover:border-brand-gold">
+        <div class="relative">
+          <div class="absolute top-4 right-4 bg-red-500 text-white px-3 py-1 rounded-full text-xs font-bold z-10">NOVO</div>
+          <div class="bg-gradient-to-br from-pink-100 to-rose-100 h-64 flex items-center justify-center p-6">
+            <div class="text-center">
+              <div class="text-6xl mb-4">💝</div>
+              <h3 class="font-serif text-2xl font-bold text-brand-blue">Calminho no Coração</h3>
+            </div>
+          </div>
+        </div>
+        <div class="p-6">
+          <p class="text-gray-700 mb-4 leading-relaxed">
+            Histórias suaves que ensinam sobre paz interior, confiança em Deus e como encontrar tranquilidade nos momentos difíceis.
+          </p>
+          <div class="flex items-center gap-2 text-sm text-gray-600 mb-4">
+            <i data-lucide="sparkles" class="w-4 h-4"></i>
+            <span>Histórias reconfortantes</span>
+          </div>
+          <a href="#historias-curam" class="block w-full bg-brand-blue text-white text-center px-6 py-3 rounded-lg font-bold hover:bg-blue-800 transition-all">
+            Ver Detalhes
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  
   <!-- BLOCO 1: Histórias Bíblicas Ilustradas -->
   <section class="mb-24 fade-in-section">
     <div class="flex flex-col md:flex-row gap-12 items-center">
@@ -93,11 +179,14 @@
   </section>
 
   <!-- BLOCO 2: Aprendendo a Orar -->
-  <section class="mb-24 fade-in-section">
+  <section id="aprendendo-orar" class="mb-24 fade-in-section">
     <div class="flex flex-col md:flex-row-reverse gap-12 items-center">
       <!-- Carrossel de Imagens -->
       <div class="w-full md:w-1/2 relative">
         <div id="carousel-2" class="relative overflow-hidden rounded-2xl shadow-2xl bg-gray-100">
+          <div class="carousel-slide hidden">
+            <img src="/pagina/files/historias_biblicas/aprendendo_a_orar/pequenos_coracoes.png" alt="Aprendendo a Orar" class="w-full h-[400px] object-contain">
+          </div>
           <div class="carousel-slide active">
             <img src="/pagina/files/historias_biblicas/aprendendo_a_orar/orar7d400px.png" alt="Aprendendo a Orar 7 dias" class="w-full h-[400px] object-contain">
           </div>
@@ -142,7 +231,7 @@
   </section>
 
   <!-- BLOCO 3: Tesouros do Coração -->
-  <section class="mb-24 fade-in-section">
+  <section id="historias-curam" class="mb-24 fade-in-section">
     <div class="flex flex-col md:flex-row gap-12 items-center">
       <!-- Carrossel de Imagens -->
       <div class="w-full md:w-1/2 relative">
@@ -200,7 +289,7 @@
   </section>
 
   <!-- BLOCO 4: Especial de Natal -->
-  <section class="mb-24 fade-in-section">
+  <section id="especial-natal" class="mb-24 fade-in-section">
     <div class="flex flex-col md:flex-row-reverse gap-12 items-center">
       <!-- Carrossel de Imagens -->
       <div class="w-full md:w-1/2 relative">
@@ -248,7 +337,7 @@
   <!-- SEÇÃO COMPARAÇÃO / COMPRE TODAS -->
   <section id="comparacao" class="bg-gradient-to-br from-brand-blue to-blue-900 text-white rounded-3xl p-12 text-center fade-in-section">
     <h2 class="font-serif text-3xl md:text-4xl font-bold mb-4">🎁 Pacote Completo: TODAS as Coleções</h2>
-    <p class="text-xl text-blue-100 mb-8 max-w-2xl mx-auto">Garanta acesso imediato às 4 coleções com desconto especial! Muitas histórias bíblicas para transformar a vida espiritual dos seus filhos.</p>
+    <p class="text-xl text-blue-100 mb-8 max-w-2xl mx-auto">Garanta acesso imediato às 4 coleções com desconto especial! Muitas histórias bíblicas para transformar a vida espiritual dos seus filhos. Fique atento, esse é um pacote por tempo limitado! Em breve cada coleção será comercializada separadamente. Aproveite 💚</p>
     
     <div class="bg-white/10 backdrop-blur-sm rounded-2xl p-8 mb-8 max-w-3xl mx-auto">
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-left">
